test/expected/perr_unterminated_for.out
shit: 2:1: error: Unterminated for loop.
     2 |  for x y
       |  ^~~ here.
shit: 2:7: note:
     2 |  for x y
       |        ^~ Expected 'do', or 'in WORDS' before it; without 'in' the loop walks the positional parameters.
